<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cs454_create3_ml</name>
  <version>0.0.0</version>
  <description>Package to handle the irobot create3 part of the manufacturing line for CS454</description>
  <maintainer email="85811392+Lance-Town@users.noreply.github.com">ubuntu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>irobot_create_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
